# libmokosuite

./: Makefile.am  autogen.sh  configure.ac  libmokosuite_git.bb
data/themes/gry/: Makefile.am  theme.edc
mokosuite/: Makefile.am
mokosuite/pim/: Makefile.am  callsdb.c  callsdb.h  contactsdb.c  contactsdb.h  globals.h  messagesdb.c  messagesdb.h  mokosuite-pim.pc.in  pim.c  pim.h
mokosuite/ui/: Makefile.am  globals.h  gui.c  gui.h  mokoinwin.c  mokosuite-ui.pc.in  mokowin.c
mokosuite/utils/: Makefile.am  cfg.c  cfg.h  dbus-marshal.list  dbus.c  dbus.h  globals.h  misc.c  misc.h  mokosuite-utils.pc.in  notifications.h  notify.c  notify.h  remote-config-service.vala  remote-config.c  remote-config.h  remote-config.xml  remoteconfig-service.vala  remoteconfig.c  remoteconfig.h  remoteconfig.xml  settings.xml  settingsdb.vala  utils.c  utils.h
pim/: Makefile.am  callsdb.c  contactsdb.c  messagesdb.c  mokosuite-pim.pc.in
tests/: Makefile.am  debug  mokowin.c  msgs.c
ui/: mokosuite-ui.pc.in
utils/: Makefile.am  cfg.c  cfg.h  misc.c  mokosuite-utils.pc.in  utils.h
